# chatnoir-api

./: LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  codeql-analysis.yml
chatnoir/: __init__.py  constants.py  util.py
chatnoir/api/: __init__.py  constants.py  types.py  util.py
chatnoir/api/model/: __init__.py  highlight.py  result.py  test_highlight.py
chatnoir/api/v1/: __init__.py  constants.py  model.py
chatnoir/model/: __init__.py  highlight.py  index.py  result.py  test_highlight.py
chatnoir_api/: __init__.py  cache.py  chat.py  constants.py  defaults.py  html.py  irds.py  lazy.py  logger.py  test_html_contents.py  util.py
chatnoir_api/model/: __init__.py  highlight.py  result.py  test_highlight.py
chatnoir_api/v1/: __init__.py  chat.py  conftest.py  constants.py  defaults.py  model.py  requests.py  search.py  search.pyi  search_phrases.py  search_phrases.pyi  test_search.py  test_search_phrases.py
examples/: cache.py  chat.py  html_contents.py  search.py  search_iterator.py  search_page.py  search_single.py
tests/: conftest.py  test_cache.py  test_chat.py  test_highlight.py  test_html_contents.py  test_ir_datasets.py  test_model.py  test_search.py  test_search_for_different_systems.py  test_search_methods.py  test_search_phrases.py  test_term_vectors.py
