[project]
name = "chatnoir-api"
authors = [
    {name = "Jan Heinrich Reimer", email = "heinrich.reimer@uni-jena.de"},
    {name = "Maik Fröbe", email = "maik.froebe@uni-jena.de"},
]
description = "Simple, type-safe access to the ChatNoir search API."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "requests~=2.26",
    "dataclasses-json~=0.5.5",
    "typing-extensions~=4.0",
    "importlib-metadata~=4.0",
    "websocket-client",
]
dynamic = ["version"]

[project.optional-dependencies]
test =[
    "flake8~=5.0",
    "pylint~=2.12",
    "pytest~=7.2",
    "pytest-cov~=4.0",
]

[project.urls]
"Homepage" = "https://github.com/chatnoir-eu/chatnoir-api"
"Bug Tracker" = "https://github.com/chatnoir-eu/chatnoir-api/issues"

[build-system]
requires = ["setuptools>=50", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["chatnoir_api"]
namespaces = false

[tool.setuptools.package-data]
mypkg = ["*.txt", "*.md", "*.rst"]

[tool.pytest.ini_options]
log_cli = "True"
filterwarnings = [
    'ignore::DeprecationWarning',
]

[tool.setuptools_scm]
