[project]
name = "chatnoir-api"
authors = [
    {name = "Jan Heinrich Merker", email = "heinrich.merker@uni-jena.de"},
    {name = "Maik Fröbe", email = "maik.froebe@uni-jena.de"},
]
description = "Simple, type-safe access to the ChatNoir search API."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "requests~=2.32",
    "dataclasses-json~=0.6.7",
    "typing-extensions~=4.12",
    "importlib-metadata~=8.5",
    "websocket-client~=1.8",
]
dynamic = ["version"]

[project.optional-dependencies]
tests =[
    "bandit[toml]~=1.7",
    "mypy~=1.13",
    "pytest~=8.3",
    "pytest-cov~=5.0",
    "ruff~=0.7.1",
]


[project.urls]
"Homepage" = "https://github.com/chatnoir-eu/chatnoir-api"
"Bug Tracker" = "https://github.com/chatnoir-eu/chatnoir-api/issues"

[build-system]
requires = ["setuptools>=50", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["chatnoir_api"]
namespaces = false

[tool.setuptools.package-data]
mypkg = ["*.txt", "*.md", "*.rst"]

[tool.pytest.ini_options]
log_cli = "True"
filterwarnings = [
    'ignore::DeprecationWarning',
]

[tool.setuptools_scm]
