[metadata]
name = chatnoir-api
version = attr: chatnoir_api.__version__
author = Jan Heinrich Reimer
author_email = jan.reimer@student.uni-halle.de
maintainer = Jan Heinrich Reimer
description = Simple, type-safe access to the ChatNoir search API.
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
url = https://github.com/heinrichreimer/chatnoir-api
project_urls =
    Bug Tracker = https://github.com/heinrichreimer/chatnoir-api/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering

[options]
python_requires = >=3.7
include_package_data = True
packages = find:
install_requires =
    requests>=2.26,==2.*
    dataclasses-json>=0.5.5,==0.5.*
    typing-extensions>=4.0,==4.*

[options.extras_require]
test =
    flake8>=4.0,==4.*
    pylint>=2.12,==2.*
    pytest>=6.2,==6.*
    pytest-cov>=3.0,==3.*
